# SentinelRS

./: .dockerignore  .env.example  .gitignore  CAHIER_DES_CHARGES.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  RELEASE_NOTES.md  ROADMAP.md  config.example.yml
crates/agent/: Cargo.toml
crates/agent/src/: batch.rs  cli.rs  lib.rs  main.rs  run.rs  shutdown.rs
crates/agent/src/api/: health.rs  metrics.rs  mod.rs  server.rs  state.rs
crates/agent/src/bootstrap/: cleanup.rs  config_writer.rs  detector.rs  mod.rs  negotiator.rs
crates/agent/src/buffer/: compaction.rs  meta.rs  mod.rs  record.rs  segment.rs  wal.rs  wal_metrics.rs
crates/agent/src/collector/: mod.rs  naming.rs  system.rs  traits.rs
crates/agent/src/config/: key_store.rs  loader.rs  mod.rs  schema.rs
crates/agent/src/exporter/: client.rs  http_fallback.rs  interceptor.rs  mod.rs  retry.rs  send_loop.rs
crates/agent/src/persistence/: mod.rs  recovery.rs  state.rs  volume.rs
crates/agent/src/plugin/: discovery.rs  engine.rs  error.rs  host_fns.rs  host_state.rs  installer.rs  manifest.rs  mod.rs  runtime.rs  scheduler.rs
crates/agent/src/scheduler/: jitter.rs  mod.rs  task.rs
crates/agent/src/security/: compress.rs  file_keystore.rs  keystore.rs  mod.rs  os_keystore.rs  signer.rs
crates/agent/src/stream/: connection.rs  handshake.rs  heartbeat.rs  mod.rs  receiver.rs  reconnect.rs  sender.rs  wal_drain.rs
crates/agent/tests/: integration.rs  plugin_integration.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/client/: api.rs  mod.rs  sse.rs
crates/cli/src/cmd/: agents.rs  completions.rs  config.rs  doctor.rs  force_send.rs  health.rs  helpers.rs  init.rs  key.rs  mod.rs  notifiers.rs  register.rs  rules.rs  status.rs  tail_logs.rs  version.rs  wal.rs
crates/cli/src/cmd/agents/: add.rs  delete.rs  generate_install.rs  get.rs  health.rs  list.rs  live.rs  mod.rs  status.rs
crates/cli/src/cmd/alerts/: get.rs  list.rs  mod.rs
crates/cli/src/cmd/cluster/: agents.rs  mod.rs  status.rs  watch.rs
crates/cli/src/cmd/config/: edit.rs  mod.rs  path.rs  reset.rs  set.rs  show.rs
crates/cli/src/cmd/key/: delete.rs  list.rs  mod.rs  rotate.rs
crates/cli/src/cmd/metrics/: agent.rs  compare.rs  export.rs  history.rs  live.rs  mod.rs  names.rs  top.rs  (+3 more)
crates/cli/src/output/: banner.rs  bar_chart.rs  confirm.rs  format.rs  input.rs  mod.rs  progress.rs  select.rs  spinner.rs  table.rs  theme.rs  time_ago.rs
crates/cli/src/store/: config.rs  loader.rs  mod.rs
crates/cli/src/tests/: helpers_tests.rs  mod.rs  output_tests.rs  parse_tests.rs  version_tests.rs  wal_tests.rs
crates/common/: Cargo.toml  README.md  build.rs
crates/common/proto/: sentinel.proto
crates/common/src/: batch_id.rs  canonicalize.rs  crypto.rs  lib.rs  metric_json.rs  nats_config.rs  pool_config.rs  redact.rs  retry.rs  seq.rs  trace_id.rs
crates/common/src/logging/: actionable.rs  banner.rs  category.rs  colors.rs  config.rs  formatter.rs  icons.rs  latency.rs  mod.rs  timed.rs  visitor.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  lib.rs  main.rs  tls.rs
crates/server/src/auth/: jwt.rs  mod.rs  signature.rs
crates/server/src/broker/: in_memory.rs  mod.rs  nats_publisher.rs  publisher.rs  stream_setup.rs
crates/server/src/grpc/: heartbeat.rs  mod.rs  push_metrics.rs  register.rs  service.rs
crates/server/src/metrics/: exposition.rs  mod.rs  server_metrics.rs
crates/server/src/middleware/: auth_layer.rs  mod.rs  rate_limit.rs
crates/server/src/migration/: health.rs  loader.rs  mod.rs  runner.rs  tracker.rs
crates/server/src/persistence/: agent_repo.rs  metrics_repo.rs  mod.rs  notification_history_repo.rs  notifier_repo.rs  pg_pool.rs  rule_repo.rs
crates/server/src/provisioning/: config_builder.rs  handler.rs  mod.rs  store.rs  token.rs  validator.rs
crates/server/src/rest/: agent_health.rs  agent_metrics.rs  agent_queries.rs  agent_types.rs  agents.rs  alerts.rs  cluster.rs  fleet.rs  health.rs  key_rotation.rs  metrics.rs  mod.rs  notification_history.rs  notifier_configs.rs  notifiers.rs  provisioning.rs  router.rs  rules.rs  token.rs
crates/server/src/store/: agent_record.rs  agent_store.rs  deprecated_key.rs  idempotency_store.rs  mod.rs  rule_record.rs  rule_store.rs
crates/server/src/stream/: authenticator.rs  dispatcher.rs  handler.rs  heartbeat_handler.rs  latency.rs  metrics_handler.rs  mod.rs  presence.rs  registry.rs  session.rs  watchdog.rs
crates/server/tests/: grpc_integration.rs  heartbeat_integration.rs  migration_integration.rs  provisioning_integration.rs  rest_integration.rs  security_acceptance.rs  stream_integration.rs
crates/workers/: Cargo.toml
crates/workers/src/: identity.rs  lib.rs  main.rs  shutdown.rs
crates/workers/src/aggregator/: mod.rs  rolling.rs  store.rs
crates/workers/src/alert/: evaluator.rs  event.rs  fingerprint.rs  mod.rs  rule.rs  state.rs  store.rs  test_harness.rs
crates/workers/src/api/: health.rs  metrics.rs  mod.rs  server.rs  state.rs  status.rs
crates/workers/src/backpressure/: circuit_breaker.rs  mod.rs  semaphore.rs
crates/workers/src/config/: mod.rs  schema.rs
crates/workers/src/consumer/: connection.rs  consumer_loop.rs  handler.rs  mod.rs
crates/workers/src/dedup/: batch_dedup.rs  mod.rs
crates/workers/src/ingestion/: alert_engine.rs  mod.rs  pipeline.rs
crates/workers/src/metrics/: exposition.rs  mod.rs  pipeline_stats.rs  worker_metrics.rs
crates/workers/src/notifier/: channel.rs  discord.rs  dispatcher.rs  dlq.rs  gotify.rs  mod.rs  ntfy.rs  opsgenie.rs  pagerduty.rs  retry.rs  signer.rs  slack.rs  smtp.rs  teams.rs  telegram.rs  webhook.rs
crates/workers/src/registry/: mod.rs  store.rs
crates/workers/src/storage/: agent_repo.rs  health.rs  migrator.rs  mod.rs  notifier_loader.rs  pool.rs  raw_writer.rs  retry.rs  rule_loader.rs  writer.rs
crates/workers/src/transform/: metric_row.rs  mod.rs  transformer.rs
crates/workers/src/verify/: mod.rs  secret_provider.rs  verifier.rs
crates/workers/tests/: pipeline_integration.rs  storage_integration.rs
(+104 files in other folders)
