[workspace]
resolver = "2"
members = [
  "crates/common",
  "crates/agent",
  "crates/server",
  "crates/workers",
  "crates/cli",
]

[profile.release]
lto = "thin"
codegen-units = 16
strip = true
opt-level = 3

[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 256
strip = false
