[package]
name = "sentinel_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
sentinel_common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.35"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prost = "0.13"
tonic = "0.12"
axum = "0.7"
crc32fast = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
hmac = "0.12"
sha2 = "0.10"
flate2 = "1"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tokio-stream = "0.1"
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
