[package]
name = "sentinel_common"
version = "0.1.0"
edition = "2021"
description = "Common types and proto files for SentinelRS"
build = "build.rs"

[lib]
name = "sentinel_common"
path = "src/lib.rs"

[dependencies]
prost = "0.13"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
prost = "0.13"
