[package]
name = "sentinel_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "sentinel_server"
path = "src/lib.rs"

[[bin]]
name = "sentinel_server"
path = "src/main.rs"

[dependencies]
sentinel_common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
axum = "0.7"
tower = { version = "0.5", features = ["util", "limit", "timeout"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dashmap = "6"
async-nats = "0.38"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
tonic = "0.12"
