[package]
name = "sentinel_workers"
version = "0.1.0"
edition = "2021"

[lib]
name = "sentinel_workers"
path = "src/lib.rs"

[[bin]]
name = "sentinel_workers"
path = "src/main.rs"

[dependencies]
sentinel_common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
async-nats = "0.38"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
