[package]
name = "sentinel_workers"
version = "0.1.0"
edition = "2021"

[lib]
name = "sentinel_workers"
path = "src/lib.rs"

[[bin]]
name = "sentinel_workers"
path = "src/main.rs"

[dependencies]
sentinel_common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
async-nats = "0.38"
prost = "0.13"
tonic = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.5", features = ["util"] }
